Fix MBS-138, highlight media and tracks with pending edits. (also change the highlight colour to make it actually visible on low quality screens :)

--- a/root/static/styles/layout.css
+++ b/root/static/styles/layout.css
@@ -666,8 +666,9 @@ dl.properties dt {
     line-height: 200%;
 }
 
+.page table.tbl tr.mp td,
 span.mp {
-    background: #FFFFCC;
+    background: #FD9;
 }
 
 /* Extra CSS Styles for the landing page */
